daddymaggus_redirect/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-daddymaggus-bayern
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redirect-daddymaggus-bayern
  template:
    metadata:
      labels:
        app: redirect-daddymaggus-bayern
    spec:
      containers:
        - name: redirect-daddymaggus-bayern
          image: morbz/docker-web-redirect
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
