daddymaggus_redirect/service.yml
apiVersion: v1
kind: Service
metadata:
  name: redirect-daddymaggus-bayern
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: redirect-daddymaggus-bayern
