daddymaggus_redirect/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: redirect-daddymaggus-bayern
  namespace: default
spec:
  tls:
    - hosts:
        - 6486165321.daddymaggus.bayern
      secretName: 6486165321-daddymaggus-bayern-cert
  rules:
    - host: "6486165321.daddymaggus.bayern"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: redirect-daddymaggus-bayern
                port:
                  number: 80
